<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pmesa.portfolio.MainActivity"
    android:background="@color/colorMainBackground"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_apps"
            android:textColor="@color/colorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            style="@style/button"
            android:id="@+id/btn_spotify"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_apps"
            android:text="@string/spotify_app_name"
            android:layout_marginTop="30dp"/>

        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            style="@style/button"
            android:id="@+id/btn_scores"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_spotify"
            android:layout_marginTop="@dimen/btn_separator"
            android:text="@string/scores_app_name"/>
        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            style="@style/button"
            android:id="@+id/btn_library"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_scores"
            android:layout_marginTop="@dimen/btn_separator"
            android:text="@string/library_app_name"/>
        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            style="@style/button"
            android:id="@+id/btn_build_it"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_library"
            android:layout_marginTop="@dimen/btn_separator"
            android:text="@string/build_app_name"/>

        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            style="@style/button"
            android:id="@+id/btn_xyz"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_build_it"
            android:layout_marginTop="@dimen/btn_separator"
            android:text="@string/xyz_app_name"/>

        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            style="@style/buttonCapstone"
            android:id="@+id/btn_capstone"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_xyz"
            android:layout_marginTop="@dimen/btn_separator"
            android:text="@string/capstone_app_name" />
    </RelativeLayout>
</ScrollView>
